--- a/qApp/app/templates/index.hbs
+++ b/qApp/app/templates/index.hbs
@@ -1,5 +1,9 @@
 <h2>Latest Posts</h2>
 
+{{#bs-button type="primary" icon="glyphicon glyphicon-download"}}
+   Downloads
+{{/bs-button}}
+
 <section id="query">
   {{#each query in model}}
     {{one-liner model=query}}
