rest response object passing trough serializer is returned fine. OK.

--- a/qApp/app/templates/index.hbs
+++ b/qApp/app/templates/index.hbs
@@ -11,7 +11,7 @@
 </section>
 
 <section id="main">
-  {{#each post in model}}
+  {{#each post in posts}}
     {{single-post model=post}}
   {{/each}}
 </section>
