component with local data is working finally

--- a/qApp/app/templates/application.hbs
+++ b/qApp/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <header class="header">
-  <h1>{{#link-to 'index'}}Ember CLI-Driven WordPress Blog{{/link-to}}</h1>
+  <h1>{{#link-to 'index'}}database query tool{{/link-to}}</h1>
 </header>
 
 <div class="main">
