component with local data is working finally

--- a/qApp/app/templates/index.hbs
+++ b/qApp/app/templates/index.hbs
@@ -2,7 +2,7 @@
 
 <section id="query">
   {{#each query in model}}
-    {{one-liner model=query queryRules=App.QueryRules}}
+    {{one-liner model=query}}
   {{/each}}
 </section>
 
