--- a/qApp/app/templates/components/one-liner.hbs
+++ b/qApp/app/templates/components/one-liner.hbs
@@ -4,17 +4,12 @@
 			<div class="input-group-btn">
 				<span class="dropdown ddLeft">
 					{{view "select" 
-									content=countries 
+									content=queryRules 
 									optionLabelPath="content.name"
-									selection=selectedCountry
-									prompt="Select a country ..."}}
+									selection=selectedFilter
+									prompt="Select a filter..."}}
 				</span>
 				<span class="dropdown ddMid">
-					{{view "select" 
-									content=currentCities
-									prompt="Select a city ..."}}
-				</span>
-				<span class="dropdown ddRight">
 					{{#bs-dropdown}}
 						{{#bs-dropdown-button}}
 							&nbsp;&nbsp;&nbsp; <span class="caret"></span>
@@ -25,6 +20,12 @@
 						{{/bs-dropdown-menu}}
 					{{/bs-dropdown}}
 				</span>
+				<span class="dropdown ddRight">
+					{{view "select" 
+									content=currentValues
+									selection=selectedFilterValue
+									prompt="Select a value..."}}
+				</span>
 			</div>
 		</div>
 	</div>
@@ -33,4 +34,4 @@
 	</div>
 </div>
 
-
+{{selectedFilter.name}} and {{selectedFilterValue}}
