--- a/qApp/app/templates/components/bs-select.hbs
+++ b/qApp/app/templates/components/bs-select.hbs
@@ -1,10 +1,14 @@
 <span class="dropdown {{dd}}">
 	{{#bs-dropdown}}
 		{{#bs-dropdown-button}}{{ddLabel}} <span class="caret"></span>{{/bs-dropdown-button}}
-		{{#bs-dropdown-menu}}
-			{{#each ddData as |rule|}}
-				<li {{action 'selectedAnItem' rule ddId on='mouseUp'}}>{{#link-to "index"}}{{rule.name}}{{/link-to}}</li>
-			{{/each}}
-		{{/bs-dropdown-menu}}
+		{{#if bbSelect}}
+			{{#bs-dropdown-menu}}
+				{{#each ddData as |rule|}}
+					<li {{action 'selectedAnItem' rule ddId on='mouseUp'}}>{{#link-to "index"}}{{rule.name}}{{/link-to}}</li>
+				{{/each}}
+			{{/bs-dropdown-menu}}
+		{{else}}
+			{{bs-input}}
+		{{/if}}
 	{{/bs-dropdown}}
 </span>
