--- a/qApp/app/templates/posts.hbs
+++ b/qApp/app/templates/posts.hbs
@@ -1,7 +1,7 @@
-posts template.<br>
-
-<section id="query">
-  {{#each query in model}}
-    {{one-liner model=query}}
-  {{/each}}
+<h2>results for posts/by_type:</h2>
+here we are.<br />
+<section id="main">
+  <ol>{{#each post in model}}
+    <li>{{post.title}}</li>
+  {{/each}}</ol>
 </section>
