--- a/qApp/app/templates/-posts.hbs
+++ b/qApp/app/templates/-posts.hbs
@@ -1,7 +1,8 @@
 <h2>results for posts/by_type:</h2>
 here we are.<br />
+
 <section id="main">
   <ol>{{#each post in model}}
-    <li>{{post.title}}</li>
+    <li>{{post.slug}}</li>
   {{/each}}</ol>
 </section>
