--- a/qApp/app/templates/posts/by-type.hbs
+++ b/qApp/app/templates/posts/by-type.hbs
@@ -1,7 +1,8 @@
 <h2>results for posts/by_type:</h2>
 
 <section id="main">
+  <h4>here we go...</h4>
   <ol>{{#each post in model}}
-    <li>{{post}}</li>
+    <li>{{post.slug}}</li>
   {{/each}}</ol>
 </section>
