--- a/qApp/app/templates/posts/by-type.hbs
+++ b/qApp/app/templates/posts/by-type.hbs
@@ -3,7 +3,8 @@
 <section id="main">
   <h4>here we go...</h4>
 
-{{log 'model is:' stacks}}
+{{log 'model is:' model}}
+{{log 'stacks is:' stacks}}
 
 	{{#each stacks as |item|}}
 		{{item.slug}}<br>
